// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exactly allows Object.is equality where deep equality would normally be used 1`] = `
<d>expect(</><r>jest.fn()</><d>).</>toBeCalledWith<d>(</><g>...expected</><d>)</>

Expected: <g>exactly<[object Object]></>
Received: <r>{}</>

Number of calls: <r>1</>
`;

exports[`exactly allows Object.is equality where deep equality would normally be used 2`] = `
<d>expect(</><r>jest.fn()</><d>).</>toBeCalledWith<d>(</><g>...expected</><d>)</>

Expected: <g>not.exactly<[object Object]></>
Received: <r>{}</>

Number of calls: <r>1</>
`;
